Modified APIs for the Service
